@@ -237,7 +237,8 @@ enum select_data_type {
 	SELECT_DATA_BLRTS_IMAGE,/* data-> char *blrtsimage */
 	SELECT_DATA_LINUX_IMAGE,/* data-> char *linuximage */
 	SELECT_DATA_MLOADER_IMAGE,/* data-> char *mloaderimage */
-	SELECT_DATA_RAMDISK_IMAGE/* data-> char *ramdiskimage */
+	SELECT_DATA_RAMDISK_IMAGE,/* data-> char *ramdiskimage */
+	SELECT_DATA_REBOOT	/* data-> uint16_t reboot */
 };
 
 enum select_print_mode {
@@ -253,7 +254,8 @@ enum select_print_mode {
 	SELECT_PRINT_BLRTS_IMAGE,/* Print just the BLRTS IMAGE */
 	SELECT_PRINT_LINUX_IMAGE,/* Print just the LINUX IMAGE */
 	SELECT_PRINT_MLOADER_IMAGE,/* Print just the MLOADER IMAGE */
-	SELECT_PRINT_RAMDISK_IMAGE/* Print just the RAMDISK IMAGE */
+	SELECT_PRINT_RAMDISK_IMAGE,/* Print just the RAMDISK IMAGE */
+	SELECT_PRINT_REBOOT	/* Print just the REBOOT */
 };
 
 enum select_node_cnt {
@@ -513,6 +515,7 @@ typedef struct job_descriptor {	/* For submit, allocate, and update requests */
 				 * dimensions, e.g. X, Y, and Z */
 #endif
 	uint16_t conn_type;	/* see enum connection_type */
+	uint16_t reboot;	/* force node reboot before startup */
 	uint16_t rotate;	/* permit geometry rotation if set */
 	char *blrtsimage;       /* BlrtsImage for block */
 	char *linuximage;       /* LinuxImage for block */
