@@ -128,6 +128,7 @@ void slurm_init_job_desc_msg(job_desc_msg_t * job_desc_msg)
 }
 #endif
 	job_desc_msg->conn_type   = (uint16_t) NO_VAL;
+	job_desc_msg->reboot      = (uint16_t) NO_VAL;
 	job_desc_msg->rotate      = (uint16_t) NO_VAL;
 	job_desc_msg->blrtsimage = NULL;
 	job_desc_msg->linuximage = NULL;
