@@ -106,6 +106,7 @@
 #define LONG_OPT_LINUX_IMAGE     0x141
 #define LONG_OPT_MLOADER_IMAGE   0x142
 #define LONG_OPT_RAMDISK_IMAGE   0x143
+#define LONG_OPT_REBOOT          0x144
 
 /*---- global variables, defined in opt.h ----*/
 opt_t opt;
@@ -422,6 +423,7 @@ static void _opt_default()
 
 	for (i=0; i<SYSTEM_DIMENSIONS; i++)
 		opt.geometry[i]	    = (uint16_t) NO_VAL;
+	opt.reboot          = false;
 	opt.no_rotate	    = false;
 	opt.conn_type	    = (uint16_t) NO_VAL;
 
@@ -621,6 +623,7 @@ static struct option long_options[] = {
 	{"linux-image",   required_argument, 0, LONG_OPT_LINUX_IMAGE},
 	{"mloader-image", required_argument, 0, LONG_OPT_MLOADER_IMAGE},
 	{"ramdisk-image", required_argument, 0, LONG_OPT_RAMDISK_IMAGE},
+	{"reboot",        no_argument,       0, LONG_OPT_REBOOT},
 	{NULL,            0,                 0, 0}
 };
 
@@ -1153,6 +1156,9 @@ static void _set_options(int argc, char **argv)
 			xfree(opt.ramdiskimage);
 			opt.ramdiskimage = xstrdup(optarg);
 			break;
+		case LONG_OPT_REBOOT:
+			opt.reboot = true;
+			break;
 		default:
 			fatal("Unrecognized command line parameter %c",
 			      opt_char);
@@ -1514,6 +1520,7 @@ static void _opt_list()
 	str = print_geometry();
 	info("geometry       : %s", str);
 	xfree(str);
+	info("reboot         : %s", opt.reboot ? "no" : "yes");
 	info("rotate         : %s", opt.no_rotate ? "yes" : "no");
 
 	if (opt.blrtsimage)
@@ -1551,7 +1558,7 @@ static void _usage(void)
 "              [--contiguous] [--mincpus=n] [--mem=MB] [--tmp=MB] [-C list]\n"
 "              [--account=name] [--dependency=jobid] [--comment=name]\n"
 #ifdef HAVE_BG		/* Blue gene specific options */
-"              [--geometry=XxYxZ] [--conn-type=type] [--no-rotate]\n"
+"              [--geometry=XxYxZ] [--conn-type=type] [--no-rotate] [ --reboot]\n"
 "              [--blrts-image=path] [--linux-image=path]\n"
 "              [--mloader-image=path] [--ramdisk-image=path]\n"
 #endif
@@ -1612,6 +1619,7 @@ static void _help(void)
 "Blue Gene related options:\n"
 "  -g, --geometry=XxYxZ        geometry constraints of the job\n"
 "  -R, --no-rotate             disable geometry rotation\n"
+"      --reboot                reboot block before starting job\n"
 "      --conn-type=type        constraint on type of connection, MESH or TORUS\n"
 "                              if not set, then tries to fit TORUS else MESH\n"
 "      --blrts-image=path      path to blrts image for bluegene block.  Default if not set\n"
